@@ -1,0 +1,5 @@
+add_executable(test-settings
+	test-settings.c
+	../../src/settings.c)
+
+
