@@ -1,3 +1,8 @@
+Version next
+-------------
+
+* Add configuration file
+
 Version 2.3.1
 -------------
 
